--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ allprojects {
     }
 }
 
+YuanZhengHu (){
+
+    System.out.print(3212131);
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
