--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name=".AddChore" />
         <activity android:name=".ChoreDetail" />
-        <activity android:name=".PersonalFile"></activity>
+        <activity android:name=".PersonalFile" />
     </application>
 
 </manifest>
