--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,10 @@
         <activity android:name=".LocationActivity" />
         <activity android:name=".StartPage" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".LogInActivity"></activity>
+        <activity android:name=".LogInActivity" />
+        <activity android:name=".UserActivity">
+            andriod:parentActivityName= ".MainActivity"
+        </activity>
     </application>
 
 </manifest>
