--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -40,8 +41,7 @@ dependencies {
 
 
 
-
-
+android.defaultConfig.vectorDrawables.useSupportLibrary = true
 
 
 apply plugin: 'com.google.gms.google-services'
