--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.1'
     compile 'com.firebaseui:firebase-ui-database:2.0.1'
 
-
+    compile  'de.hdodenhof:circleimageview:2.1.0'
 }
 
 
