--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-auth:11.0.1'
     compile 'com.firebaseui:firebase-ui-database:2.0.1'
-
+    'com.android.support:appcompat-v7:27.0.2'
     compile  'de.hdodenhof:circleimageview:2.1.0'
 }
 
